2010-12-09 Thu  Jari Aalto  <jari.aalto@cante.net>

	* bin/t2html.pl (Main): Read $TITLE variable set in command line.

2010-12-05 Sun  Jari Aalto  <jari.aalto@cante.net>

	* bin/t2html.pl (HandleCommandLineArgs): Correct
	--Link-check-single top --link-check-single.

2010-05-01 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/t2html.pl (HandleCommandLineArgs): Remove
	"require_order" from Getopt::Long::config().

2010-04-15 Thu  Jari Aalto  <jari.aalto@cante.net>

	* bin/t2html.pl (Help): rewrite eval Pod::Man call.

2010-04-13 Tue  Jari Aalto  <jari.aalto@cante.net>

	* bin/t2html.pl: Add 'use 5.10' because "Named Capture Buffers"
	are used.

2010-03-24 Wed  Jari Aalto  <jari.aalto@cante.net>

	* README (at the end): Add Copyright and License.

2010-03-13 Sat  Jari Aalto  <jari.aalto@cante.net>

	* t2html.pl:  (top level): rearrange globals and "use"
        commands.
        (Version*): new.

2010-03-12 Sat  Jari Aalto  <jari.aalto@cante.net>

	* t2html.pl:
	(top level): English qw( -no_match_vars )

2010-03-02 Tue  Jari Aalto  <jari.aalto@cante.net>

	* t2html.pl: (top level): update copyright template.
	(Help): Change all mixed case options like --Link-check to
	lowercase --link-check.
	(DESCRIPTION): improve documentation and mention pm-doc
	example page.
	(FORMAT DESCRIPTION): rewrite the layout example: make sure
	all the columns line up with the presented text.

	* conversion/index.txt: Add index.css

	* conversion/index.css: New file.

2010-02-16  Jari Aalto  <jari.aalto@cante.net>

	* t2html.pl (Initialize): add "http://www.w3.org/TR/html4/loose.dtd"
	to doctype to fix W3C validator informational message.
	(HtmlFixes): remove duplicate <p><p> occurrences.

2010-02-13 Sat  Jari Aalto  <jari.aalto@cante.net>

	* t2html.pl (PrintEnd): at 'This file has been automatically generated'
	do not surround with <P></P> tags as HTML standard does not allow it
	Use only opening tag <P>.

2009-08-31  Jari Aalto  <jari.aalto@cante.net>
